--- a/css/style.css
+++ b/css/style.css
@@ -19,20 +19,21 @@ body {
     background-color: #1C1C1C;
     border-radius: 20px;
     width: 550px;
-    height: 225px;
+    height: 300px;
     overflow: hidden;
     transition: height 0.5s;
 }
 
 .container:hover {
-    height: 400px;
+    height: 450px;
     /* Adjust the expanded height as needed */
 }
 
 /* Styles for the profile image */
 .profile {
-    width: 200px;
-    height: 200px;
+    padding: 10px;
+    width: 250px;
+    height: 250px;
     object-fit: fill;
     display: inline-block;
     vertical-align: top;
@@ -47,7 +48,7 @@ body {
     border-radius: 10px;
     font-size: 10px;
     line-height: 1.5;
-    height: 175px;
+    height: 260px;
     position: relative;
     display: inline-block;
     vertical-align: top;
