--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* Reset some default styles */
 html,
 body {
     height: 100%;
@@ -10,7 +9,11 @@ body {
     cursor: none;
 }
 
-/* Styles for the container */
+::selection {
+    background-color: transparent;
+    color: #000;
+}
+
 .container {
     position: absolute;
     top: 50%;
@@ -25,11 +28,9 @@ body {
 }
 
 .container:hover {
-    height: 475px;
-    /* Adjust the expanded height as needed */
+    height: 480px;
 }
 
-/* Styles for the profile image */
 .profile {
     width: 300px;
     height: 300px;
@@ -37,12 +38,10 @@ body {
     object-fit: fill;
     display: inline-block;
     vertical-align: top;
-    /* Align to the top */
 }
 
-/* Styles for the code block */
 .code-block {
-    padding-left: 30px;
+    padding-right: 30px;
     margin-left: 30px;
     margin-top: 20px;
     background-color: #F0F0F0;
@@ -54,14 +53,12 @@ body {
     position: relative;
     display: inline-block;
     vertical-align: top;
-    /* Align to the top */
 }
 
-/* Styles for the hidden div */
 .hidden-div {
     font-size: 10px;
     opacity: 0;
-    bottom: 30px;
+    bottom: 40px;
     left: 0;
     width: 100%;
     background-color: #F0F0F0;
@@ -77,14 +74,14 @@ body {
 
 .custom-cursor {
     z-index: 9999;
-    width: 20px; /* Set the width of your cursor image */
-    height: 20px; /* Set the height of your cursor image */
+    width: 20px;
+    height: 20px;
     border-width: 2px;
     border-style: solid;
     border-color: #1C1C1C;
     border-radius: 50%;
-    background-color: #269AF2; /* URL to your cursor image */
-    background-size: cover; /* Adjust image size */
+    background-color: #269AF2;
+    background-size: cover;
     position: absolute;
-    pointer-events: none; /* Ensure it doesn't interfere with interactions */
+    pointer-events: none;
 }
