--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,53 @@ body {
     position: absolute;
     pointer-events: none;
 }
+
+@media screen and (max-width: 768px) { 
+    .container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #1C1C1C;
+        border-radius: 20px;
+        width: 300px;
+        height: 150px;
+        overflow: hidden;
+        transition: height 0.5s;
+    }
+    
+    .container:hover {
+        height: 480px;
+    }
+    
+    .profile {
+        width: 200px;
+        height: 200px;
+        margin-left: 25px;
+        margin-top: -15px;
+        object-fit: fill;
+        display: inline-block;
+        vertical-align: top;
+    }
+
+    .code-block {
+        opacity: 0;
+    }
+
+    .hidden-div {
+        font-size: 5px;
+        opacity: 0;
+        bottom: 100px;
+        left: 0;
+        width: 100%;
+        background-color: #F0F0F0;
+        transition: opacity 0.3s;
+        transition-delay: 0.1s;
+        position: absolute;
+        height: 140px;
+    }
+    
+}
+
+
+
