--- a/css/style.css
+++ b/css/style.css
@@ -1,77 +1,74 @@
 @font-face {
-font-family: "Comfortaa";
-src: url("../fonts/Comfortaa.ttf");
+    font-family: "Comfortaa";
+    src: url("../fonts/Comfortaa.ttf");
 }
 
 body {
-display: flex;
-align-items: center;
-justify-content: center;
-font-family: 'Comfortaa';
-background-color: #E9DAB3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Comfortaa';
+    background-color: #4E7370;
 }
 
 img {
-box-shadow: 0 0 10px rgba(233, 218, 179, 1);
+    box-shadow: 0 0 10px #4E7370;
 }
 
 #container {
-display: flex;
-justify-content: center;
-align-items: center;
-width: 800px;
-height: 500px;
-border-radius: 20px;
-background-color: white;
-box-shadow: 0 0 10px rgba(255, 255, 255, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 800px;
+    height: 500px;
+    border-radius: 20px;
+    background-color: white;
+    box-shadow: 0 0 10px white;
 }
 
 #avatar-container {
-width: 200px;
-height: 200px;
+    width: 200px;
+    height: 200px;
 }
 
 #avatar {
-width: 100%;
-height: 100%;
-border-radius: 100%;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
 }
 
 #buttons-container {
-display: flex;
-flex-direction: column;
-align-content: flex-end;
-gap: 10px;
-width: 200px;
-height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+    gap: 10px;
+    width: 200px;
+    height: 200px;
 }
 
 .button {
-display: flex;
-align-items: center;
-justify-content: center;
-margin: 1px;
-width: 100%;
-height: 100%;
-border-radius: 15px;
-background-color: #E9DAB3; 
-box-shadow: 0 0 10px rgba(233, 218, 179, 1);
-transition: background-color 0.5s ease-in-out;
+    user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1px;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background-color: #4e7370cf;
+    box-shadow: 0 0 10px #4E7370;
+    transition: background-color 0.5s ease-in-out, width 0.5s ease-in-out;
 }
 
 .button:hover {
-background-color: #ffe6a5;
-}
-
-.about-button {
-border-radius: 50px 160px 20px 160px;
+    background-color: #4E7370;
+    width: 110%;
 }
 
 .blog-button {
-width: 170px;
-align-self: flex-end;
+    border-radius: 50px 160px 20px 160px;
 }
 
 .socials-button {
-border-radius: 160px 20px 160px 50px;
+    border-radius: 160px 20px 160px 50px;
 }
